# mastors

./: .env.sample  .env.test.sample  .gitignore  Cargo.toml  LICENSE-MIT  README.md
mastors-derive/: Cargo.toml
mastors-derive/src/: lib.rs
mastors-derive/src/internals/: mod.rs
src/: connection.rs  error.rs  lib.rs  scope.rs
src/asyncronous/methods/: mod.rs
src/asyncronous/methods/api/v1/: instance.rs  media.rs  mod.rs  statuses.rs  streaming.rs  trends.rs
src/asyncronous/methods/api/v2/: media.rs
src/entities/: account.rs  activity.rs  application.rs  attachment.rs  card.rs  context.rs  dummy.rs  emoji.rs  history.rs  identity_proof.rs  instance.rs  list.rs  markers.rs  mention.rs  mod.rs  notification.rs  page_navigation.rs  poll.rs  privacy.rs  relationship.rs  report.rs  role.rs  rule.rs  scheduled_status.rs  status.rs  tag.rs
src/entities/admin/: account.rs  ip.rs  mod.rs  report.rs
src/synchronous/: mod.rs
src/synchronous/methods/: mod.rs
src/synchronous/methods/api/: mod.rs
src/synchronous/methods/api/v1/: custom_emojis.rs  instance.rs  markers.rs  media.rs  mod.rs  polls.rs  scheduled_statuses.rs  streaming.rs
src/synchronous/methods/api/v1/accounts/: mod.rs  relationships.rs  search.rs
src/synchronous/methods/api/v1/admin/: mod.rs
src/synchronous/methods/api/v1/notifications/: mod.rs
src/synchronous/methods/api/v1/reports/: mod.rs
src/synchronous/methods/api/v1/statuses/: mod.rs
src/synchronous/methods/api/v1/timelines/: public.rs  tag.rs
src/synchronous/streaming/: event_listener.rs  event_type.rs  mod.rs  stream_type.rs
src/synchronous/utils/: reqwest.rs
src/syncronous/: mod.rs  streaming_timeline.rs
src/syncronous/methods/: mod.rs
src/syncronous/methods/api/: mod.rs
src/syncronous/methods/api/v1/: custom_emojis.rs  instance.rs  markers.rs  media.rs  mod.rs  polls.rs  scheduled_statuses.rs  streaming.rs  trends.rs
src/syncronous/methods/api/v1/accounts/: mod.rs  relationships.rs  search.rs
src/syncronous/methods/api/v1/lists/: mod.rs
src/syncronous/methods/api/v1/notifications/: mod.rs
src/syncronous/streaming/: event_handler.rs  event_listener.rs  event_type.rs  mod.rs  sse_stream.rs  stream_type.rs
src/syncronous/utils/: reqwest.rs
src/utils/: mod.rs  serde.rs
(+52 files in other folders)
