[package]
name = "mastors"
version = "0.1.0"
authors = ["kedamaDQ <kedama@foresdon.jp>"]
description = "A client API library for Mastodon"
repository = "https://github.com/kedamaDQ/mastors/"
edition = "2018"
keywords = ["mastodon"]
categories = ["api-bindings", "web-programming::http-client"]
license = "MIT OR Apache-2.0"

[dependencies]
mastors-derive = { path = "./mastors-derive" }
chrono = { version = "0.4", features = ["serde"] }
dotenv = { version = "0.15" }
err-derive = { version = "0.2" }
eventsource = { version = "0.5" }
isolang = { version = "1.0" }
lazy_static = { version = "1.4" }
log = { version = "0.4" }
regex = { version = "1.3" }
reqwest = { version = "0.10", features = ["json", "gzip", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
url = { version = "2.1", features = ["serde"] }

[dev-dependencies]
