[package]
name = "mastors-derive"
version = "0.1.0"
authors = ["kedamaDQ <kedama@foresdon.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mastors_derive"
proc-macro = true

[dependencies]
quote = { version = "1.0" }
syn = { version = "1.0", features = ["extra-traits"] }
